@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-15T16:21:12Z",
+  "timestamp" : "2023-07-16T01:59:42Z",
   "count_outdated" : 668,
   "uniques_outdated" : 375,
-  "count" : 724,
-  "uniques" : 413,
+  "count" : 725,
+  "uniques" : 414,
   "clones" : [
     {
       "timestamp": "2023-07-03T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
